# truverse-textbook

./: .gitignore  .vercelignore  BETTER_AUTH_IMPLEMENTATION.md  DEPLOYMENT.md  FIXES_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  README.md  README_FINAL.md  REQUIREMENTS_VERIFICATION.md  vercel.json
.claude/: AGENTS.md  agent.py
.claude/skills/: hardware_spec_lookup.md  ros2_command_generator.md
auth-server/: .env  README.md  auth.js  create-test-user.js  package-lock.json  package.json  server.js  simple-auth.js
backend/: .env  .env.example  .gitignore  FREE_ALTERNATIVES.md  README.md  SETUP_EMBEDDINGS.md  main.py  pyproject.toml  requirements.txt  test_api_endpoints.py  test_connections.py  test_free_embeddings.py  test_neon.py  test_rag_search.py
backend/data/: ingestion_manifest.json
backend/scripts/: ingest_content.py
backend/src/api/: personalization.py  skills.py  translation.py
backend/src/api/routes/: auth.py  search.py
backend/src/core/: config.py  exceptions.py
backend/src/database/: postgres.py  qdrant.py
backend/src/middleware/: auth.py
backend/src/models/: __init__.py  chat.py  personalization.py  user.py
backend/src/schemas/: auth.py  search.py
backend/src/services/: agent_service.py  auth_service.py  embedding_service.py  personalization_service.py  translation_service.py
backend/src/services/skills/: hardware_lookup.py  ros2_generator.py
backend/src/utils/: logging.py
frontend/: URDU_TRANSLATION.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json  vercel.json
frontend/.docusaurus/: i18n.json  (+7 more)
(+86 files in other folders)
